@@ -143,6 +143,9 @@ Library
   io.BytesIO and io.StringIO objects now raise ValueError when the object has
   been closed.  Patch by Alessandro Moura.
 
+- Issue #16112: platform.architecture does not correctly escape argument to
+  /usr/bin/file.  Patch by David Benjamin.
+
 - Issue #12776,#11839: call argparse type function (specified by add_argument)
   only once. Before, the type function was called twice in the case where the
   default was specified and the argument was given as well.  This was
